// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`talondesign/regionWrapper renders when islocked is false 1`] = `
<talondesign-region-wrapper>
  #shadow-root(open)
    <div
      class="ui-interactions-region"
      data-allow-drop="false"
      data-item-id="blah-blah-blah"
      data-region-label="My Label!"
      data-region-name="foo"
      data-region-type="huh"
    >
      <slot />
    </div>
</talondesign-region-wrapper>
`;

exports[`talondesign/regionWrapper renders when islocked is true 1`] = `
<talondesign-region-wrapper>
  #shadow-root(open)
    <div
      class="ui-interactions-region"
      data-allow-drop="true"
      data-item-id="blah-blah-blah"
      data-region-label="My Label!"
      data-region-name="foo"
      data-region-type="huh"
    >
      <slot />
    </div>
</talondesign-region-wrapper>
`;
